--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -58,3 +58,20 @@ jobs:
           name: Code-Coverage-Result
           path: coverage
           retention-days: 5 
+          
+    docker:
+      runs-on: ubuntu-latest
+      needs: [unit-testing, code-coverage]
+      steps:
+        - uses: actions/checkout@v4
+        - uses: docker/login-action@v3
+          with:
+            registry: ghcr.io
+            username: '${{ github.repository_owner }}'
+            password: '${{ secrets.GITHUB_TOKEN }}'
+        - uses: docker/build-push-action@v6
+          with:
+            context: .
+            push: true
+            tags: 'ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}' 
+            
