--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -60,6 +60,8 @@ jobs:
           retention-days: 5 
           
     docker:
+      permissions:
+        packages: write
       runs-on: ubuntu-latest
       needs: [unit-testing, code-coverage]
       steps:
