--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -19,10 +19,10 @@ jobs:
         - name: Checkout Repository
           uses: actions/checkout@v4
 
-        - name: Setup NodeJS Version
-          uses: actions/setup-node@v4
-          with:
-            node-version: 20
+        # - name: Setup NodeJS Version
+        #   uses: actions/setup-node@v4
+        #   with:
+        #     node-version: 20
             
         - name: Cache NPM dependencies
           uses: actions/cache@v4
