--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -15,6 +15,8 @@ jobs:
     unit-testing:
         name: Unit Testing
         runs-on: ubuntu-latest
+        container:
+          image: 'node:20'
         steps:
         - name: Checkout Repository
           uses: actions/checkout@v4
