--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -78,4 +78,21 @@ jobs:
             context: .
             push: true
             tags: 'ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}' 
-            
+  
+    dev-deploy:
+      needs: docker
+      runs-on: ubuntu-latest
+      environment:
+        name: development
+      steps:
+        - uses: actions/checkout@v4
+        - uses: azure/setup-kubectl@v4
+          with:
+            version: v1.28.1
+        - uses: azure/k8s-set-context@v3
+          with:
+            method: kubeconfig
+            kubeconfig: '${{ secrets.KUBECONFIG }}'
+        - run: kubectl version -o yaml
+                
+                
